@@ -1,3 +1,7 @@
+procps-3.1.8 --> procps-3.1.9
+
+top: fix suspend/resume behavior
+
 procps-3.1.7 --> procps-3.1.8
 
 top: fix keyboard handling (help screen, etc.)
